UIP-626, UIP-816, UIP-817 --> last ie9 tweaks for select dropdowns
Change-Id: I4ebf42a3e8a954d59a37952e279546ec3de29586

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -744,17 +744,26 @@ input[type=file] {
         }
     }
     &.ie9 {
-        select {
-            // pushes default select arrow out of range
-            width: 160%;
-            option {
-                &:checked,
-                &:hover {
-                    background-color: $color-input-fill;
-                    color: $color-input-text;
-                }
-            }
-        }
+		.input-container {
+			.wrapper {
+				&:after {
+					content: '';
+				}
+		        
+			}
+		}
+		select {
+			// allow input widths to override
+			width: 100%;
+			padding-right: 0;
+			option {
+				&:checked,
+				&:hover {
+					background-color: $color-input-fill;
+					color: $color-input-text;
+				}
+			}
+		}
     }
     &.select-filter {
         .input-container {
