UIP-157: use FormLabel and FormError for other Form components where possible to reduce duplicate code
Change-Id: Idbb5e5a601251fb28c645307b0bdbdf7f4f4ad49

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -426,6 +426,12 @@ label {
                 margin-bottom: 0;
             }
         }
+        &.group {
+            .label-text {
+                text-transform: none;
+                color: $color-midnight;
+            }
+        }
         input[type=radio] {
             position: absolute;
             visibility: hidden;
