UIP-814, UIP-827, UIP-819 --> FormIntegerField v2 ignores className property; Fix modal positioning in IE9; Infinite scroller not working in IE9
Change-Id: Ic6cfb34eec057efd962163be8abcbb06524af709

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -39,11 +39,12 @@
         z-index: 1;
         top: 0;
         left: 50%;
-        transform: translateX(-50%);
         height: 100%;
         max-width: $max-modal-width;
         min-width: 360px;
         font-family: $font-pn-regular;
+        
+        @include transform(translateX(-50%));
     }
     .modal-header {
         position: relative;
