UIP-687 --> missing from inputs css file.
Change-Id: I5e4ae92cc97105811585de3f85b3ede51dc79c30

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -3,6 +3,7 @@
 $default-input-transition: all 0.3s;
 $default-input-height: 40px;
 $default-input-font-size: 14px;
+$borderSize: 1px !default;
 
 
 // CORE INPUT STYLES -------------------------------------------------------------------------------
