UIP-915 Fix null return on data-id, Add support for images or no images
Change-Id: Ic53fba02da4acb9e8f34181bf65f98a0366dda86

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -94,11 +94,18 @@ $layout-nav-width-offset: 15px;
                 text-decoration: none;
             }
         }
-        [class^='icon-'],
-        [class*=' icon-'] {
+        .icon {
             display: inline-block;
             height: $item-size;
             width: $item-size;
+        }
+        img {
+            &.icon {
+                height: auto;
+                width: auto;
+                max-height: $item-size;
+                max-width: $item-size;
+            }
         }
     }
     .product-menu {
