Various fixes for missing or misplaced CSS - found while performing WP work
Change-Id: Ic504d7951a06034acca5e4c655c4b8c13604087d

--- a/packages/ui-library/src/css/details-page.scss
+++ b/packages/ui-library/src/css/details-page.scss
@@ -15,6 +15,18 @@
         height: 20px;
         margin: 0 0 0 10px;
 
+        button,
+        input[type=button],
+        .button,
+        .input-toggle,
+        .status {
+            display: inline-block;
+            vertical-align: top;
+            margin: 30px 0 0 20px;
+
+            @include transform(translateY(-50%));
+        }
+
         &.status-open {
             padding-right: 200px;
         }
