--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -7,7 +7,7 @@
     padding: 25px 0 22px;
     margin: 0 0 -1px $line-indent;
 
-    .collapsible-section-title {
+    > .collapsible-section-title {
         position: relative;
         display: inline-block;
         padding: 0 0 0 1px;
@@ -18,17 +18,17 @@
         cursor: pointer;
         font-family: $font-pn-regular;
     }
-    .collapsible-section-content {
+    > .collapsible-section-content {
         overflow: hidden;
         max-height: 0;
 
         @include transition((all 0.3s));
     }
-    .collapsible-section-content-inner {
+    > .collapsible-section-content-inner {
         margin: 12px 0 0 25px;
     }
     &.open {
-        .collapsible-section-content {
+        > .collapsible-section-content {
             overflow: visible;
             max-height: 4000px;
 
@@ -41,6 +41,7 @@
         &:hover {
             color: $color-slate;
             text-decoration: none;
+
             &.left:before {
                 color: $color-slate;
             }
