--- a/packages/ui-library/src/css/loader.scss
+++ b/packages/ui-library/src/css/loader.scss
@@ -107,12 +107,12 @@ button.spinner {
 
 .icon-ellipsis {
     $color: rgba($color-walrus, 0.6);
-    position: relative;
-    display: inline-block;
-    color: $color-white;
     $size: 7px;
     $spacing: 7px;
     $timing: 1s ease-out infinite;
+
+    position: relative;
+    display: inline-block;
 
     > span,
     &:before,
@@ -149,7 +149,7 @@ button.spinner {
             opacity: 0;
         }
         50% {
-            opacity: 1;
+            opacity: 0.6;
         }
     }
 
@@ -158,7 +158,7 @@ button.spinner {
             opacity: 0;
         }
         75% {
-            opacity: 1;
+            opacity: 0.6;
         }
     }
 
@@ -167,7 +167,7 @@ button.spinner {
             opacity: 0;
         }
         100% {
-            opacity: 1;
+            opacity: 0.6;
         }
     }
     &.ie9 {
@@ -186,7 +186,7 @@ button.spinner {
     &.success,
     &.cancel {
         .icon-ellipsis {
-            $color: rgba($color-white, 0.6);
+            $color: $color-white;
             > span,
             &:before,
             &:after {
